[FIX] Temporary m2o picker display align fix

--- a/web_responsive/static/src/less/main.less
+++ b/web_responsive/static/src/less/main.less
@@ -151,9 +151,10 @@ main {
 
     .ui-autocomplete {
         font-size: 20px;
-        left: auto;
-        right: auto;
+        left: 7.5% !important;
+        right: 7.5% !important;
         align-self: center;
         min-width: 85%;
+        max-width: 85%;
     }
 }
